# raytracer

./: .gitignore  CMakeLists.txt
include/core/: HitRecord.h  Hittable.h  Ray.h
include/geometry/: AABB.h  BVHNode.h  BVHTree.h  Hittable.h  HittableList.h  Scene.h  Sphere.h
include/materials/: Dielectric.h  Lambertian.h  Material.h
include/math/: Ray.h  Vec3.h
include/renderer/: Camera.h  RayColor.h
src/: TraceRay.h  main.cpp
src/accel/: AABB.h  BVH.cpp  BVH.h  BVHNode.cpp  BVHNode.h  BVHTree.cpp  BVHTree.h
src/core/: HitRecord.h  Ray.h  Vec3.h
src/geometry/: BVHNode.cpp  BVHTree.cpp  Hittable.h  HittableList.cpp  HittableList.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h
src/materials/: BRDF.cpp  BRDF.h  BSDF.cpp  BSDF.h  Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.h  Sampling.cpp  Sampling.h  Scatter.cpp  Scatter.h
src/math/: Ray.h  Vec3.h
src/renderer/: Camera.cpp  Camera.h  Film.cpp  Film.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  TileQueue.cpp  TileQueue.h  TraceRay.h
src/util/: ProgressBar.h  RNG.h
tests/: MemoryAnalysis.cpp  SceneTest.cpp
tests/accel/: AABBTest.cpp  BVHTest.cpp  BVHTreeTest.cpp
tests/core/: RayTest.cpp  Vec3Test.cpp
tests/geometry/: AABBTest.cpp  BVHTreeTest.cpp  HittableListTest.cpp  SceneTest.cpp  SphereTest.cpp  Sphere_test.cpp
tests/math/: MemoryAnalysis.cpp  Ray_test.cpp  Vec3Test.cpp  Vec3_test.cpp
tests/util/: RNGTest.cpp
